# Deep-Learning-Lab

./: README.md  pyproject.toml
Lab1-basic/: main.ipynb
Lab10-Attention/: main.ipynb
Lab2-ML-ex1/: main.ipynb
Lab3-ML-ex2/: main.ipynb
Lab4-LM/: main.ipynb
Lab5-GD/: main.ipynb
Lab6-FNN/: main.ipynb
Lab7-CNN/: main.ipynb
Lab8-RNN/: main.ipynb  prepare.py
Lab8-RNN/log/: GRU_on_IMDB_Basic_train_log.csv  GRU_on_IMDB_Hymmn0s_train_log.csv  GRU_on_MNIST_training_log_Basic.csv  GRU_on_MNIST_training_log_Hymmn0s.csv  LSTM_on_IMDB_Basic_train_log.csv  LSTM_on_IMDB_Hymmn0s_train_log.csv  LSTM_on_MNIST_training_log_Basic.csv  LSTM_on_MNIST_training_log_Hymmn0s.csv  RNN_on_IMDB_Basic_train_log.csv  RNN_on_IMDB_Hymmn0s_train_log.csv  RNN_on_MNIST_training_log_Basic.csv  RNN_on_MNIST_training_log_Hymmn0s.csv
Lab8-RNN/model/: best_GRU_on_IMDB_Basic.pth  best_GRU_on_MNIST_Basic.pth  best_GRU_on_MNIST_Hymmn0s.pth  best_LSTM_on_IMDB_Basic.pth  best_LSTM_on_MNIST_Basic.pth  best_LSTM_on_MNIST_Hymmn0s.pth  best_RNN_on_IMDB_Basic.pth  best_RNN_on_MNIST_Basic.pth  best_RNN_on_MNIST_Hymmn0s.pth
Lab9-Optimization/: main.ipynb
